# pyheatpump

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: README.md  conf.py  examples.rst  index.rst  modules.rst  pyheatpump.rst
examples/: calculate_cop.py  cops.py  geothermal_heatpump.py
hp/: cop.py
pyheatpump/: __init__.py  cop.py  costs.py  power.py
test/: cops.py  costs.py  installation.py  power.py
