[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyheatpump"
version = "0.1.0"
description = "Modeling large-scale and high temperature heat pumps"
authors = [
    { name="Amedeo Ceruti", email="amedeo.ceruti@tum.de" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
testing = ["pytest"]
docs = ["sphinx", "sphinx-rtd-theme", "myst_parser", "sphinxcontrib-programoutput"]
